tests/neg/package-export/numerics.scala
package numerics

trait Ring[T]
